kube/minecraft/mc-router.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mc-router
  namespace: minecraft
spec:
  type: ClusterIP
  ports:
  - targetPort: web
    name: web
    port: 8080
  - targetPort: proxy
    name: proxy
    port: 25565
  selector:
    run: mc-router
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: mc-router
  name: mc-router
  namespace: minecraft
spec:
  selector:
    matchLabels:
      run: mc-router
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        run: mc-router
    spec:
      serviceAccountName: mc-router
      containers:
      - image: itzg/mc-router:latest
        name: mc-router
        args: ["--api-binding", ":8080", "--in-kube-cluster"]
        ports:
        - name: proxy
          containerPort: 25565
        - name: web
          containerPort: 8080
        resources:
          requests:
            memory: 50Mi
            cpu: "100m"
          limits:
            memory: 100Mi
            cpu: "250m"
