kube/minecraft/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: minecraft-tcp-gateway
  namespace: minecraft
spec:
  gatewayClassName: traefik
  listeners:
    - name: minecraft-tcp
      protocol: TCP
      port: 25565
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: minecraft-tcp-route
  namespace: minecraft
  annotations:
    uptimekuma.io/monitor: "true"
spec:
  parentRefs:
    - name: minecraft-tcp-gateway
      namespace: minecraft
      sectionName: minecraft-tcp
  rules:
    - backendRefs:
        - name: mc-router
          port: 25565
          kind: Service
          group: ""
          weight: 1
